PD-33 Изменить классы под отправку уведомлений